Wed Feb  8 02:17:02 2017  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (Forwardable._delegator_method): extract
	  method generator and deal with non-module objects.
	  [ruby-dev:49656] [Bug #12478]

Wed Feb  8 02:17:02 2017  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (def_instance_delegator): adjust backtrace of
	  method body by tail call optimization.  adjusting the delegated
	  target is still done by deleting backtrace.

	* lib/forwardable.rb (def_single_delegator): ditto.

Tue Jan 17 03:51:48 2017  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (setup_args): duplicate splatting array if more
	  arguments present to obey left-to-right execution order.
	  [ruby-core:77701] [Bug# 12860]

Thu Nov 24 05:47:18 2016  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (TestFileUtils#setup): Use primary
	  group as well as supplementary groups.
	  based on the patch by Vit Ondruch at [Bug #12910]

Thu Nov 24 05:44:04 2016  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* test/ruby/test_dir_m17n.rb: Don't encode to UTF-8 if it's unnecessary.
	  If the file system encoding is ISO-8851-1 or if the encoding of the
	  target string is invalid, don't encode to UTF-8. [Bug#12972]

Mon Nov 21 16:55:15 2016  boshan  <boshan@subsplash.com>

	* lib/tempfile.rb (Tempfile#initialize): [DOC] the first parameter
	  `basename` is optional and defaulted to an empty string since
	  [GH-523].  [Fix GH-1225]

Sat Nov 19 14:06:07 2016  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>

	* iseq.c (proc_dup): don't duplicate sym_procs.  [Fix GH-1479]
	  [ruby-core:78100] [Bug #12927]
	  Based on the patch provided by Emiliano Ritiro.

Sat Nov 19 11:48:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (iseqw_s_compile_file): deal with syntax error as well as
	  compile, and should not abort when rescued.

Wed Nov 16 23:40:29 2016  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>
