@@ -1,6 +1,6 @@
 #define RUBY_VERSION "2.3.3"
 #define RUBY_RELEASE_DATE "2017-03-20"
-#define RUBY_PATCHLEVEL 247
+#define RUBY_PATCHLEVEL 248
 
 #define RUBY_RELEASE_YEAR 2017
 #define RUBY_RELEASE_MONTH 3
